# dynamic-hedge-pairs-trading

./: README.md  dynamic_hedge_pairs_trading.ipynb  environment.yml  environment.yml~  pyproject.toml  requirements.txt
notebooks/: dynamic_hedge_pairs_trading.ipynb  example_02.ipynb  load_inspect_data.ipynb  pairs_trading_01.ipynb  ver_02.ipynb  ver_03.ipynb  ver_03a.ipynb  ver_04.ipynb  ver_04a.ipynb  ver_04b.ipynb  ver_04c.ipynb  ver_05_min.ipynb  ver_05a_min.ipynb  visualize_cointegrated_pairs.ipynb
pairs/: #__init__.py#  __init__.py  __init__.py~
pairs/market_data/: __init__.py  openbb_history.py
pairs/models/: kalman.py  kalman.py~
pairs/plotting/: __init__.py  pair_trades.py
pairs/stats/: __init__.py  __init__.py~  cointegration.py  stationarity.py  transforms.py  transforms.py~
pairs/strategies/: __init__.py  __init__.py~  evaluate.py  pairs.py~  signals.py
pairs/universes/: __init__.py
pairs/utils/: progress.py  splits.py  tickers.py
pairs_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
